# huffman-coding

./: .gitignore  CMakeLists.txt  README.md  Test.c  example_usage.c  example_usage.cpp  huffman.c  huffman.h  huffman_coding.c  huffman_coding_cli.c  huffman_coding_cli.h  huffman_utility.c  huffman_utility.h  huffman_utility_test.c  huffman_utility_test.h  test_utility.c
include/: huffman.h  huffman_coding.hpp  huffman_data.hpp  sorted_chars.hpp
minheap/: minheap.c  minheap.h  minheaptest.c  minheaptest.h
priorityqueue/: priorityqueue.c  priorityqueue.h  priorityqueuetest.c  priorityqueuetest.h
src/: huffman.c  huffman.h  huffman_coder.cpp  huffman_coder.hpp  huffman_coding.c  huffman_coding.cpp
src/minheap/: minheap.c
src/sorted_chars/: sorted_chars.cpp  sorted_chars.hpp
src/sorted_chars/huffman_tree/: huffman_tree.cpp  huffman_tree.hpp  i_huffman_tree.hpp
src/utility/: huffman_file_to_file.c  huffman_file_to_file.h  huffman_serialization.h  huffman_utility.c  memory_space.c
src/utility/file/: huffman_file_to_file.c  huffman_file_to_file.h
src/utility/independent_int/: independent_int.c
src/utility/memory_space/: memory_space.h
src/utility/serialization/: huffman_serialization.c  huffman_serialization.h
test/: CMakeLists.txt  huffman_utility_test.c  test.c  test_all_chars.c  test_deserialization.c  test_huffman_files.c  test_huffman_simple.c  test_serialization.c  test_utility.c  test_utility.h
test/huffman_data/: CMakeLists.txt  huffman_data.cpp
test/tests/: CMakeLists.txt  huffman_utility_test.c  minheaptest.c  test_all_chars.c  test_cli.c  test_deserialization.c  test_huffman_big_files.c  test_huffman_files.c  test_huffman_simple.c  test_iuint.c  test_iunit.c  test_memory_space.c  test_serialization.c  test_utility_test.c
utility/: huffman_file_to_file.c  huffman_file_to_file.h  huffman_serialization.c  huffman_serialization.h  huffman_utility.c  huffman_utility.h  independent_int.c  independent_int.h  memory_space.c  memory_space.h
