project(huffman_test)
cmake_minimum_required(VERSION 2.8.12)

set(huffman_essentials huffman.c minheap/minheap.c utility/huffman_utility.c test/test_utility.c utility/huffman_serialization.c utility/independent_int.c utility/huffman_file_to_file.c utility/memory_space.c)
add_executable(test_serialization test/tests/test_serialization.c ${huffman_essentials})
add_executable(test_huffman_simple test/tests/test_huffman_simple.c ${huffman_essentials})
add_executable(test_huffman_all_chars test/tests/test_all_chars.c ${huffman_essentials})
add_executable(test_huffman_files test/tests/test_huffman_files.c ${huffman_essentials})
add_executable(test_huffman_big_files test/tests/test_huffman_big_files.c ${huffman_essentials})
add_executable(test_iuint test/tests/test_iuint.c utility/independent_int.c)
add_executable(test_huffman_utility test/tests/huffman_utility_test.c ${huffman_essentials})
add_executable(test_utility test/tests/test_utility_test.c ${huffman_essentials})
add_executable(test_memory_space test/tests/test_memory_space.c utility/memory_space.c)

enable_testing()
add_test(serial_test test_serialization)
add_test(huffman_simple_test test_huffman_simple)
add_test(huffman_all_chars_test test_huffman_all_chars)
add_test(huffman_files_test test_huffman_files)
add_test(huffman_big_files_test test_huffman_big_files)
add_test(iuint_test test_iuint)
add_test(huffman_utility_test test_huffman_utility)
add_test(utility_test test_utility)
add_test(memory_space_test test_memory_space)
set_tests_properties(serial_test huffman_simple_test huffman_all_chars_test huffman_files_test iuint_test huffman_utility_test utility_test huffman_big_files_test memory_space_test PROPERTIES WILL_FAIL FALSE)